--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "dotenv": "^8.0.0",
     "express": "^4.16.4",
-    "telegraf": "^3.32.0",
-    "seedrandom": "^3.0.1"
+    "seedrandom": "^3.0.1",
+    "telegraf": "^3.32.0"
   },
   "engines": {
     "node": "8.x"
