--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "dotenv": "^8.0.0",
     "express": "^4.16.4",
+    "mem": "^5.1.1",
     "seedrandom": "^3.0.1",
     "telegraf": "^3.32.0"
   },
